--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -11,7 +11,10 @@
     padding: 20px;
     border-right: 1px solid lightgray;
 }
-
+.sidebar__header > p{
+    font-size: 18px;
+    padding-top: 8px;
+}
 .sidebar__headerRight{
     display: flex;
     align-items: center;
